--- a/trilok-login.html
+++ b/trilok-login.html
@@ -54,7 +54,7 @@
         <div class="text-center mt-6">
             <p class="text-sm text-gray-500">
                 Don't have an account? 
-                <a href="storefront.html" class="font-medium text-blue-600 hover:underline">Browse courses</a>
+                <a href="trilok.html" class="font-medium text-blue-600 hover:underline">Browse courses</a>
             </p>
         </div>
     </div>
@@ -123,7 +123,7 @@
             }
 
             // 3. SUCCESS! They are a customer.
-            window.location.href = 'student_dashboard.html?store=trilok';
+            window.location.href = 'trilok_dashboard.html?store=trilok';
         });
 
 
