--- a/checkout.html
+++ b/checkout.html
@@ -222,7 +222,7 @@
             }
             
             if (data.institutes?.store_slug) {
-                backToStoreLink.href = `trilok.html?store=${data.institutes.store_slug}`;
+                backToStoreLink.href = `trilok.html
             }
             document.getElementById('institute-name-header').textContent = data.institutes?.name || 'ERPLI Courses';
             return data;
